# gfslib

./: .env.example  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  docs.yml  testpypi.yml
docs/: getting-started.md  index.md  storage-guide.md
docs/api/: storage.md
src/gfslib/: __init__.py
src/gfslib/storage/: __init__.py  client.py
tests/: test_storage_integration.py
